# llm-bench

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_bench/: __init__.py  cli.py  devices.py  llama_server.py  llama_server_runner.py  lm_studio.py  lm_studio_runner.py  models.py  parser.py  reporter.py  runner.py  storage.py  sysinfo.py
src/llm_bench/data/models/: high_ram.yaml  lm_studio.yaml  low_ram.yaml  medium_ram.yaml
src/llm_bench/data/models/specific/amd/: RX7900XT.yaml
tests/: conftest.py  test_cli_models.py  test_devices.py  test_hf_repos.py  test_llama_server.py  test_llama_server_runner.py  test_lm_studio.py  test_lm_studio_runner.py  test_models.py  test_parser.py  test_runner.py  test_storage.py  test_sysinfo.py
